# minstreldb

./: .gitignore  CMakeLists.txt  README.md  mainc.c  mainl.c  mains.c
data/: config.txt
include/client/: client.h
include/server/: server.h
include/util/: config.h  log.h  resource.h  types.h
src/client/platform/macos/: client.c
src/server/platform/macos/: server.c
src/util/: config.c  io.c  kvfile.c
